Provide a custom icon for scheduled posts
LBSD-2442

--- a/client/app/scripts/liveblog-edit/styles/liveblog-edit.scss
+++ b/client/app/scripts/liveblog-edit/styles/liveblog-edit.scss
@@ -703,6 +703,15 @@
     .active .lb-big-icon-contributions {
         background-image: url('~images/contributions_active.svg');
     }
+
+    .lb-big-icon-scheduled-posts {
+        background-image: url('~images/scheduled-posts.svg');
+    }
+
+    .active .lb-big-icon-scheduled-posts {
+        background-image: url('~images/scheduled-posts_active.svg');
+    }
+
     .lb-big-icon-editor {
         background-image: url('~images/editor.svg');
     }
