--- a/client/app/scripts/liveblog-edit/styles/liveblog-edit.scss
+++ b/client/app/scripts/liveblog-edit/styles/liveblog-edit.scss
@@ -948,3 +948,14 @@
         top: 0px;
     }
 }
+
+.schedule-datetime-picker {
+    background-color: #ffffff !important;
+    border: 1px solid #d9d9d9 !important;
+
+    &__hover {
+        background-color: #ffffff !important;
+        border: 1px solid #5ea9c8 !important;
+        box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.15);
+    }
+}
