--- a/client/app/scripts/liveblog-edit/styles/liveblog-edit.scss
+++ b/client/app/scripts/liveblog-edit/styles/liveblog-edit.scss
@@ -953,9 +953,12 @@
     background-color: #ffffff !important;
     border: 1px solid #d9d9d9 !important;
 
+    &:hover,
     &__hover {
         background-color: #ffffff !important;
         border: 1px solid #5ea9c8 !important;
         box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.15);
+        position: relative;
+        z-index: 100000;
     }
 }
