Render shared post in modal dialog
Now using the endpoint to show the shared post. Also adjusting styling and some other minor details

LBSD-2553

--- a/server/liveblog/themes/themes_assets/default/less/shared_post.less
+++ b/server/liveblog/themes/themes_assets/default/less/shared_post.less
@@ -1,6 +1,17 @@
 
 @import "globals.less";
 
+.hide-scrollbar {
+    overflow-y: scroll;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+
+
 .lb-timeline.lb-timeline-shared-post {
     .lb-post {
         padding-right: 10px;
