--- a/server/liveblog/blogs/templates/embed_shared_post.html
+++ b/server/liveblog/blogs/templates/embed_shared_post.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="lb-wrapHtml">
+<html class="lb-wrapHtml hide-scrollbar">
     <head>
         <title>{{ blog.title }}</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
