--- a/server/liveblog/themes/themes_assets/default/less/shared_post.less
+++ b/server/liveblog/themes/themes_assets/default/less/shared_post.less
@@ -13,10 +13,15 @@
 
 
 .lb-timeline.lb-timeline-shared-post {
+    padding-bottom: 0px;
+
     .lb-post {
-        padding-right: 10px;
-        padding-left: 10px;
+        padding: 30px 10px 0px 10px;
         margin-left: 0px;
+
+        &:after {
+            display: none;
+        }
     }
     .lb-post:before {
         display: none;
@@ -50,6 +55,34 @@
     }
     .lb-slideshow {
         margin-left: 0px;
+    }
+
+    .lb-author {
+        flex-direction: row-reverse;
+        align-self: flex-start;
+    }
+
+    .lb-author__avatar {
+        margin-right: 10px;
+        margin-left: 0px;
+        height: 30px;
+        width: 30px;
+    }
+
+    .lb-post-updated {
+        margin-top: 10px;
+        margin-bottom: 0px;
+        align-self: flex-start;
+        font-size: 12px;
+        margin-left: 10px;
+    }
+
+    .lb-post-header {
+        justify-content: left;
+    }
+
+    .lb-author__name {
+        margin-top: -10px;
     }
 }
 
