Implement theme styles settings serializer
This allows converting the json like structure from the theme styles settings
into compatible css styling string
LBSD-980

--- a/server/liveblog/blogs/templates/embed.html
+++ b/server/liveblog/blogs/templates/embed.html
@@ -28,6 +28,10 @@
         :root { --watermark: url('{{ assets_root }}images/logo-liveblog-watermark.svg') }
         </style>
         {% endif %}
+
+        <style>
+        {{ styles_settings }}
+        </style>
     </head>
     <body class="lb-wrapBody {% if settings.watermark %}watermark{% endif %}" style="{{ (output and output.get('style')) | tostyle | safe }}">
 {% elif not settings.removeStylesESI %}
