Improve font picker styles and fetch mechanism
We are now checking if the google api key exists. If it
doesn't then a warning is shown in the browser console

LBSD-980

--- a/client/app/scripts/liveblog-edit/styles/settings.scss
+++ b/client/app/scripts/liveblog-edit/styles/settings.scss
@@ -266,3 +266,8 @@ p.warn-block {
 .justify-space-between {
     justify-content: space-between;
 }
+
+.react-select__selector input {
+    min-height: unset;
+    height: unset;
+}
