Improve linked attributes in theme styles
This allows to have attributes values connected with the attributes of other groups.
Also improved the z-index problem with fontpicker component

LBSD-980:

--- a/client/app/scripts/liveblog-edit/styles/settings.scss
+++ b/client/app/scripts/liveblog-edit/styles/settings.scss
@@ -267,6 +267,10 @@ p.warn-block {
     justify-content: space-between;
 }
 
+.react-select__selector {
+    z-index: 999;
+}
+
 .react-select__selector input {
     min-height: unset;
     height: unset;
