Add ability to load google fonts
We are now able to load google fonts from the styling settings
LBSD-980

--- a/server/liveblog/blogs/templates/embed.html
+++ b/server/liveblog/blogs/templates/embed.html
@@ -29,6 +29,11 @@
         </style>
         {% endif %}
 
+        {% if fonts_url %}
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="{{ fonts_url }}" rel="stylesheet">
+        {% endif %}
+
         <style>
         {{ styles_settings }}
         </style>
