Sort fonts by popularity and load selected font in dropdown
LBSD-980

--- a/server/liveblog/themes/themes_assets/default/less/tags.less
+++ b/server/liveblog/themes/themes_assets/default/less/tags.less
@@ -28,7 +28,7 @@ body.lb-wrapBody {
 
   i {font-style: italic;}
   a {
-      color: #3394bc !important;
+      color: #3394bc;
   }
   a:hover {
       text-decoration: none;
