Implementing more styles for Default SEO Theme
LBSD-980

--- a/server/liveblog/themes/themes_assets/default/less/embed.less
+++ b/server/liveblog/themes/themes_assets/default/less/embed.less
@@ -808,10 +808,7 @@
     background-size: 20px;
   }
 
-   // Posts End
-
   // Load New Post
-
   .lb-button {
     z-index: 1;
     font-size: .85em;
@@ -820,13 +817,14 @@
     cursor: pointer;
     padding: 4px 14px;
     background-color: #34b77a;
+    filter: brightness(90%);
     color: @white;
     border-radius: 3px;
   }
 
   .lb-button:hover {
     color: @white;
-    background-color: #1eaf6c;
+    filter: brightness(100%);
   }
 
   .load-more-posts {
