--- a/server/liveblog/themes/themes_assets/default/templates/template-post.html
+++ b/server/liveblog/themes/themes_assets/default/templates/template-post.html
@@ -69,7 +69,12 @@
     {% if item and item.groups and item.groups[1] and item.groups[1].refs and (item.groups[1].refs | length > 0) %}
         {% for ref in item.groups[1].refs %}
           {% if ref.item.item_type == "image" %}
-            {% if settings.showGallery and loop.index0 + 1 < loop.length and item.groups[1].refs[loop.index0 + 1].item.item_type == "image" and (loop.index0 - 1 < 0 or not (loop.index0 > 0 and item.groups[1].refs[loop.index0 - 1].item.item_type == "image")) %}
+            {% set isNotTheLastItem = loop.index0 + 1 < loop.length %}
+            {% set isNextItemOfImageType = item.groups[1].refs[loop.index0 + 1].item.item_type == "image" %}
+            {% set isPreviousItemOfImageType = item.groups[1].refs[loop.index0 - 1].item.item_type == "image" %}
+            {% set inAGalleryLoop = loop.index0 > 0 and isPreviousItemOfImageType %}
+
+            {% if settings.showGallery and isNotTheLastItem and isNextItemOfImageType and (loop.index0 - 1 < 0 or not inAGalleryLoop) %}
               {# this works only for first element in gallery loop bcs variables are scoped in jinja2 #}
               {% set galleryItem = true %}
               <!-- slideshow start -->
@@ -77,10 +82,12 @@
                 <div class="lb-slideshow_frame">
                   <div class="lb-slideshow_slides">
             {% endif %}
+            
             {# if previous item was an image and current item is an image as well = we are inside gallery loop #}
-            {% if settings.showGallery and item.groups[1].refs[loop.index0 - 1].item.item_type == "image" %}
+            {% if settings.showGallery and isPreviousItemOfImageType %}
               {% set galleryItem = true %}
             {% endif %}
+
             <!-- image item start -->
             <div class="lb-item {% if ref.item.meta.media.renditions.original.height > ref.item.meta.media.renditions.original.width %}portrait{% endif %}{{ref.item.item_type}}">
           {% else %}
