--- a/server/liveblog/themes/themes_assets/default/templates/template-post.html
+++ b/server/liveblog/themes/themes_assets/default/templates/template-post.html
@@ -72,9 +72,9 @@
             {% set isNotTheLastItem = loop.index0 + 1 < loop.length %}
             {% set isNextItemOfImageType = item.groups[1].refs[loop.index0 + 1].item.item_type == "image" %}
             {% set isPreviousItemOfImageType = item.groups[1].refs[loop.index0 - 1].item.item_type == "image" %}
-            {% set inAGalleryLoop = loop.index0 > 0 and isPreviousItemOfImageType %}
+            {% set inGalleryLoop = loop.index0 > 0 and isPreviousItemOfImageType %}
 
-            {% if settings.showGallery and isNotTheLastItem and isNextItemOfImageType and (loop.index0 - 1 < 0 or not inAGalleryLoop) %}
+            {% if settings.showGallery and isNotTheLastItem and isNextItemOfImageType and (loop.index0 - 1 < 0 or not inGalleryLoop) %}
               {# this works only for first element in gallery loop bcs variables are scoped in jinja2 #}
               {% set galleryItem = true %}
               <!-- slideshow start -->
