--- a/server/liveblog/themes/themes_assets/default/templates/template-post.html
+++ b/server/liveblog/themes/themes_assets/default/templates/template-post.html
@@ -68,7 +68,7 @@
   {% else %}
     {% if item and item.groups and item.groups[1] and item.groups[1].refs and (item.groups[1].refs | length > 0) %}
         {% for ref in item.groups[1].refs %}
-          {% if ref.item.item_type == "image" %}
+          {% if ref.item.item_type == "image" and ref.item.meta.media %}
             {% set isNotTheLastItem = loop.index0 + 1 < loop.length %}
             {% set isNextItemOfImageType = item.groups[1].refs[loop.index0 + 1].item.item_type == "image" %}
             {% set isPreviousItemOfImageType = item.groups[1].refs[loop.index0 - 1].item.item_type == "image" %}
@@ -94,11 +94,12 @@
             <!-- item start -->
             <div class="lb-item {{ref.item.item_type}}">
           {% endif %}
+
           {% if ref.item.item_type == "embed" or ref.item.meta.provider_name == "YoutubeUpload" %}
             {% include "template-item-embed.html" %}
           {% elif ref.item.item_type == "image" and galleryItem %}
             {% include "template-item-galleryImage.html" %}
-          {% elif ref.item.item_type == "image" %}
+          {% elif ref.item.item_type == "image" and ref.item.meta.media %}
             {% include "template-item-image.html" %}
           {% elif ref.item.item_type == "quote" %}
             {% include "template-item-quote.html" %}
@@ -110,6 +111,7 @@
             <article>{{ ref.item.text | safe }}</article>
           {% endif %}
           </div>
+
           <!-- item end -->
           {% if settings.showGallery and ref.item.item_type == "image" and loop.index0 - 1 >= 0 and item.groups[1].refs[loop.index0 - 1].item.item_type == "image" and item.groups[1].refs[loop.index0 + 1].item.item_type != "image" %}    </div>
                 <span class="lb-slideshow_prev">
