Implement setting to disable timestamp in pinned posts
This theme setting will allow users to hide the datetime in pinned post when using Default SEO Theme. To be implemented in child themes in next release after this version is published on npm

LBSD-2616

--- a/server/liveblog/themes/themes_assets/default/templates/template-post.html
+++ b/server/liveblog/themes/themes_assets/default/templates/template-post.html
@@ -44,7 +44,9 @@
       {% endif %}
 
       <!-- remove advertisement stylization-->
-      {% if item.post_items_type != "advertisement" %}
+      {% set showPostDate = item.post_items_type != "advertisement" and not (item.sticky and settings.hidePinnedPostDatetime) %}
+
+      {% if showPostDate %}
         <div class="lb-post-date relativeDate{% if settings.clientDatetimeOnly %} mod--displaynone{% endif %}" data-js-timestamp="{{ postDate }}">{{ postDate | date('') }}</div>
       {% endif %}
     </div>
@@ -82,7 +84,7 @@
                 <div class="lb-slideshow_frame">
                   <div class="lb-slideshow_slides">
             {% endif %}
-            
+
             {# if previous item was an image and current item is an image as well = we are inside gallery loop #}
             {% if settings.showGallery and isPreviousItemOfImageType %}
               {% set galleryItem = true %}
