Revert "Remove fixes to run scenario on test instances"
This reverts commit 78e888a705b496558a93eb0d499c9e7cbd809ec3.

--- a/server/liveblog/themes/themes_assets/default/templates/template-post.html
+++ b/server/liveblog/themes/themes_assets/default/templates/template-post.html
@@ -70,7 +70,7 @@
   {% else %}
     {% if item and item.groups and item.groups[1] and item.groups[1].refs and (item.groups[1].refs | length > 0) %}
         {% for ref in item.groups[1].refs %}
-          {% if ref.item.item_type == "image" %}
+          {% if ref.item.item_type == "image" and ref.item.meta.media %}
             {% set isNotTheLastItem = loop.index0 + 1 < loop.length %}
             {% set isNextItemOfImageType = item.groups[1].refs[loop.index0 + 1].item.item_type == "image" %}
             {% set isPreviousItemOfImageType = item.groups[1].refs[loop.index0 - 1].item.item_type == "image" %}
@@ -101,7 +101,7 @@
             {% include "template-item-embed.html" %}
           {% elif ref.item.item_type == "image" and galleryItem %}
             {% include "template-item-galleryImage.html" %}
-          {% elif ref.item.item_type == "image" %}
+          {% elif ref.item.item_type == "image" and ref.item.meta.media %}
             {% include "template-item-image.html" %}
           {% elif ref.item.item_type == "quote" %}
             {% include "template-item-quote.html" %}
