All views responsive quick fix

--- a/client/app/styles/sass/lb-bootstrap.scss
+++ b/client/app/styles/sass/lb-bootstrap.scss
@@ -61,3 +61,5 @@
 @import '~superdesk-core/styles/sass/sf-additional';
 @import '~superdesk-core/styles/sass/sf-icons';
 @import '~superdesk-core/styles/sass/search-list';
+
+@import 'responsive';
