Add initial implementation of LiveblogPosting schema
More info about it here https://schema.org/BlogPosting

--- a/server/liveblog/blogs/templates/embed.html
+++ b/server/liveblog/blogs/templates/embed.html
@@ -52,7 +52,12 @@
 </style>
 {% endif %}
 
+<script type="application/ld+json">
+{{ schema | safe }}
+</script>
+
 {{ template | safe }}
+
 <script type="text/javascript">
     window.LB = {
         blog: {{ blog | tojson | safe }},
