Update Twitter new branding logo to X
LBSD-2723

--- a/server/liveblog/themes/themes_assets/default/less/embed.less
+++ b/server/liveblog/themes/themes_assets/default/less/embed.less
@@ -774,8 +774,8 @@
   }
 
   .lb-type--embed-twitter {
-    background-color: #6bacdf;
-    background-image: url("../images/twitter_logo_white.png");
+    background-color: #000;
+    background-image: url("../images/x_logo_white.png");
     background-size: 20px;
   }
 
