--- a/server/liveblog/themes/themes_assets/default/templates/template-author.html
+++ b/server/liveblog/themes/themes_assets/default/templates/template-author.html
@@ -11,7 +11,7 @@
       {% if mainItem.syndicated_creator and settings.showSyndicatedAuthor %}
         {{ mainItem.syndicated_creator.display_name }}
       {% elif item.original_creator %}
-        {{ item.original_creator[settings.authorNameFormat]|title }}
+        {{ item.original_creator[settings.authorNameFormat] }}
       {% elif item.publisher %}
         {{ item.publisher.display_name }}
       {% endif %}
