WIP : Change embed share view from modal to updating the iframe

--- a/server/liveblog/themes/themes_assets/default/templates/template-timeline.html
+++ b/server/liveblog/themes/themes_assets/default/templates/template-timeline.html
@@ -140,8 +140,15 @@
       <div data-new-updates class="lb-post new-updates mod--displaynone">
         <div>{{ translate("See new updates") }}</div>
       </div>
-      <div data-counted-updates class="lb-post new-updates mod--displaynone">
-        <div><span id="data-counted-updates-length-container"></span>{{ translate(" new updates") }}</div>
+      <div data-counted-updates class="lb-post new-updates {% if not api_response.newUpdatedCount %}mod--displaynone{% endif %}">
+        <div>
+          <span id="data-counted-updates-length-container">
+            {% if api_response.newUpdatedCount %}
+                {{ api_response.newUpdatedCount }}
+            {% endif %}
+          </span>
+          {{ translate(" new updates") }}
+        </div>
       </div>
     {% if settings.stickyPosition == 'bottom' %}
       <section data-timeline-sticky class="lb-posts list-group sticky{% if not api_response.stickyPosts._items|length %} sticky--empty{% endif %}">
