Adjust Default SEO Theme so it renders
Given that we're adding a new item type, the theme need to be adjusted so the publish of the embed will not fail

LBSD-2770

--- a/server/liveblog/themes/themes_assets/default/templates/template-post.html
+++ b/server/liveblog/themes/themes_assets/default/templates/template-post.html
@@ -67,6 +67,8 @@
   <div class="items-container">
   {% if type == "comment" %}
     {% include "template-post-comment.html" %}
+  {% elif type == "post_comment" %}
+    <!-- TODO: complete rendering -->
   {% else %}
     {% if item and item.groups and item.groups[1] and item.groups[1].refs and (item.groups[1].refs | length > 0) %}
         {% for ref in item.groups[1].refs %}
