--- a/client/app/scripts/liveblog-edit/styles/liveblog-edit.scss
+++ b/client/app/scripts/liveblog-edit/styles/liveblog-edit.scss
@@ -356,12 +356,12 @@
                                 display: -webkit-flex;
                                 display: flex; // for easy adding additional button
                                 flex-direction: row;
-                                flex-wrap: wrap;
+                                flex-wrap: nowrap;
                                 padding-left: 0;
                                 .st-block-control {
                                     //.btn;
                                     position: relative;
-                                    margin: 0 10px 0 0;
+                                    margin: 0 0 0 0;
                                     padding: 0 10px 0 36px;
                                     font-size: 14px;
                                     -webkit-box-flex: 1 auto;
