Static UI for Poll on reader side

--- a/server/liveblog/themes/themes_assets/default/templates/template-post.html
+++ b/server/liveblog/themes/themes_assets/default/templates/template-post.html
@@ -109,6 +109,8 @@
             {% include "template-item-quote.html" %}
           {% elif ref.item.item_type == "comment" %}
             {% include "template-item-comment.html" %}
+          {% elif ref.item.item_type == "poll" %}
+            {% include "template-item-poll.html" %}
           {% elif ref.item.item_type == "video" and not ref.item.meta.provider_name %}
             {% include "template-mobile-app-video-workaround.html" %}
           {% else %}
