--- a/server/liveblog/themes/themes_assets/default/templates/template-post.html
+++ b/server/liveblog/themes/themes_assets/default/templates/template-post.html
@@ -110,7 +110,7 @@
           {% elif ref.item.item_type == "comment" %}
             {% include "template-item-comment.html" %}
           {% elif ref.item.item_type == "poll" %}
-            {% include "template-item-poll.html" %}
+            {% include "template-poll.html" %}
           {% elif ref.item.item_type == "video" and not ref.item.meta.provider_name %}
             {% include "template-mobile-app-video-workaround.html" %}
           {% else %}
