--- a/server/liveblog/themes/themes_assets/default/templates/template-timeline.html
+++ b/server/liveblog/themes/themes_assets/default/templates/template-timeline.html
@@ -4,6 +4,8 @@
 
 {% include "template-watermark.html" %}
 
+{% include "template-poll-utils.html" %}
+
 {% include "template-gdpr-consent-placeholder.html" %}
 
 <div data-timeline class="lb-timeline {{ settings.language }}">
