--- a/server/liveblog/themes/themes_assets/default/templates/template-poll.html
+++ b/server/liveblog/themes/themes_assets/default/templates/template-poll.html
@@ -39,7 +39,7 @@
           <p style="font-size: 12px; color: #737373;">&bull;</p>
           <p style="font-size: 12px; color: #737373;">Ends <span id="vote-end-{{ pollId }}"></span></p>
         </div>
-        <button style="margin: 0; width: fit-content; align-self: end; color: white; background-color: #5EA8C9; border-radius: 6px; padding: 10px;" type="submit">VOTE</button>
+        <button style="font-size: 14px; margin: 0; width: fit-content; align-self: baseline; color: white; background-color: #5EA8C9; border-radius: 6px; padding: 10px;" type="submit">VOTE</button>
     </div>
   </form>
 </div>
